# AI-Job-Replacement

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  image.py  main.py  models.py  scoring.py
app/data/: explanations.py  jobs.py  questions.py
app/static/css/: custom.css
app/static/js/: questionnaire.js  result.js
app/templates/: base.html  index.html  questionnaire.html  result.html
tests/: test_routes.py  test_scoring.py
