[project]
name = "ai-job-replacement"
version = "0.1.0"
description = "Will AI Replace My Job? - Interactive questionnaire website"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
